--- a/documentation/docs/pages/operators/introduction.mdx
+++ b/documentation/docs/pages/operators/introduction.mdx
@@ -1,3 +1,5 @@
+import QuickStart from 'components/operators/snippets/quick-start.mdx'
+
 # Introduction
 
 This is **Nym's Operators guide**, containing information and setup guides for the various components of Nym network and Nyx blockchain validators.
@@ -21,6 +23,8 @@ If you want to explore kickstart options and examples, learn how to integrate wi
 ## Minimum Requirements
 
 **If you are an operator and want to join the journey of starting and mantaining a Nym Node, begin with visiting [Minimum requirements page](nodes.mdx).**
+
+<QuickStart />
 
 ## Popular pages
 
