--- a/documentation/docs/pages/operators/nodes/nym-node/setup.mdx
+++ b/documentation/docs/pages/operators/nodes/nym-node/setup.mdx
@@ -8,6 +8,7 @@ import NymNodeHelp from 'components/outputs/command-outputs/nym-node-help.md';
 import NymNodeRunHelp from 'components/outputs/command-outputs/nym-node-run-help.md';
 import { AccordionTemplate } from 'components/accordion-template.tsx';
 import TermsConditions from 'components/operators/snippets/tc-info.mdx';
+import QuickStart from 'components/operators/snippets/quick-start.mdx'
 
 # Nym Node Setup & Run
 
@@ -35,6 +36,7 @@ Detailed version archive and release notes is documented [here](../../changelog.
 {/* COMMENTING THIS OUT ASS WE HAVE TO FIGURE OUT HOW TO SHOW THE LATEST VERSION FROM MASTER BRANCH
 <BuildInfo />
 */}
+
 
 ## Functionality (mode)
 
@@ -75,6 +77,8 @@ Wireguard nodes route data directly to the open internet. Therefore it exposes I
 Everything essential for each mode exists on `nym-node` by default. For instance, if you run a Mixnode, you'll find that a NR (Network Requester) and IPR (IP Packet Router) addresses exist, but they will be ignored in `mixnode` mode.
 
 Note that every `exit-gateway` mode is basically an `entry-gateway` with NR (Network Requester) and IPR (IP Packet Router) enabled. This means that every `exit-gateway` can work as an `entry-gateway` but not the opposite.
+
+<QuickStart />
 
 ## Command & Examples
 
