--- a/documentation/docs/pages/operators/changelog.mdx
+++ b/documentation/docs/pages/operators/changelog.mdx
@@ -7,6 +7,7 @@ import { AccordionTemplate } from 'components/accordion-template.tsx';
 import { Steps } from 'nextra/components';
 import AbuseResponse from 'components/operators/templates/dmca_response.md';
 import OperatorIntroduction from 'components/operators/templates/provider_introduction.md';
+import QuickDeploymentSteps from 'components/operators/templates/quick-bridge-deployment-script-setup.mdx';
 
 
 export const TestingSteps = () => (
@@ -47,6 +48,10 @@ This page displays a full list of all the changes during our release cycle from 
 **Note:** Any information published on this page was up to date at the time of writing. We do *not* maintain changelog retrospectively.
 
 <VarInfo />
+
+## QUIC Transport Bridge Deployment
+
+<QuickDeploymentSteps />
 
 ## `v2025.17-isabirra`
 
