add version compatibility callout

--- a/documentation/docs/components/operators/snippets/quick-bridge-deployment-script-setup.mdx
+++ b/documentation/docs/components/operators/snippets/quick-bridge-deployment-script-setup.mdx
@@ -8,6 +8,10 @@ Operators can use [Nym Bridge Configuration Tool](https://github.com/nymtech/nym
 
 **We recommend a more convenient QUICK bridge deployment using a script [`quick_bridge_deployment.sh`](https://github.com/nymtech/nym/blob/develop/scripts/nym-node-setup/quick_bridge_deployment.sh), following the steps below.**
 
+<Callout type="info" emoji="ℹ️">
+**QUICK bridge is a requirement for all nodes which enable Wireguard functionality. Note that it this feature is compatible with nodes from `v1.18.0` (platform release [`v2025.17-isabirra`](https://github.com/nymtech/nym/releases/tag/nym-binaries-v2025.17-isabirra)) and newer!**
+</ Callout>
+
 <Steps>
 ###### 1. Download [`quick_bridge_deployment.sh`](https://github.com/nymtech/nym/blob/develop/scripts/nym-node-setup/quick_bridge_deployment.sh) script
 - SSH to your server
