correct name of QUIC snippet

--- a/documentation/docs/components/operators/snippets/quic-bridge-deployment-script-setup.mdx
+++ b/documentation/docs/components/operators/snippets/quic-bridge-deployment-script-setup.mdx
@@ -3,22 +3,22 @@ import { Callout } from 'nextra/components';
 import { AccordionTemplate } from 'components/accordion-template.tsx';
 
 <Callout type="info" emoji="ℹ️">
-**QUICK bridge is a requirement for all nodes which enable Wireguard functionality. Note that it this feature is compatible with nodes from `v1.18.0` (platform release [`v2025.17-isabirra`](https://github.com/nymtech/nym/releases/tag/nym-binaries-v2025.17-isabirra)) and newer!**
+**QUIC bridge is a requirement for all nodes which enable Wireguard functionality. Note that it this feature is compatible with nodes from `v1.18.0` (platform release [`v2025.17-isabirra`](https://github.com/nymtech/nym/releases/tag/nym-binaries-v2025.17-isabirra)) and newer!**
 </ Callout>
 
-Nym Network uses various [transport bridges](https://github.com/nymtech/nym-bridges/blob/main/README.md) for routing the packets. Right now operators need to configure [our implementation](https://github.com/nymtech/nym-bridges/tree/main/nym-bridge) of general-purpose transport layer network protocol called [QUICK](https://en.wikipedia.org/wiki/QUIC). 
+Nym Network uses various [transport bridges](https://github.com/nymtech/nym-bridges/blob/main/README.md) for routing the packets. Right now operators need to configure [our implementation](https://github.com/nymtech/nym-bridges/tree/main/nym-bridge) of general-purpose transport layer network protocol called [QUIC](https://en.wikipedia.org/wiki/QUIC). 
 
 Operators can use [Nym Bridge Configuration Tool](https://github.com/nymtech/nym-bridges/tree/main/bridge-cfg) and compile the [Bridge Runner binary](https://github.com/nymtech/nym-bridges/tree/main/nym-bridge) themselves.
 
-**We recommend a more convenient QUICK bridge deployment using a script [`quick_bridge_deployment.sh`](https://github.com/nymtech/nym/blob/develop/scripts/nym-node-setup/quick_bridge_deployment.sh), following the steps below.**
+**We recommend a more convenient QUIC bridge deployment using a script [`quic_bridge_deployment.sh`](https://github.com/nymtech/nym/blob/develop/scripts/nym-node-setup/quic_bridge_deployment.sh), following the steps below.**
 
 <Steps>
-###### 1. Download [`quick_bridge_deployment.sh`](https://github.com/nymtech/nym/blob/develop/scripts/nym-node-setup/quick_bridge_deployment.sh) script
+###### 1. Download [`quic_bridge_deployment.sh`](https://github.com/nymtech/nym/blob/develop/scripts/nym-node-setup/quic_bridge_deployment.sh) script
 - SSH to your server
 - Download the script and make executable 
 ```sh
-wget https://raw.githubusercontent.com/nymtech/nym/refs/heads/develop/scripts/nym-node-setup/quick_bridge_deployment.sh && \
-chmod +x quick_bridge_deployment.sh
+wget https://raw.githubusercontent.com/nymtech/nym/refs/heads/develop/scripts/nym-node-setup/quic_bridge_deployment.sh && \
+chmod +x quic_bridge_deployment.sh
 ```
 
 
@@ -26,7 +26,7 @@ chmod +x quick_bridge_deployment.sh
 - Optional: open `tmux` in case you will need to run another commands on the VPS
 - Run the script with a command `full_bridge_setup`
 ```sh
-./nym-node-setup/quick_bridge_deployment.sh full_bridge_setup
+./nym-node-setup/quic_bridge_deployment.sh full_bridge_setup
 ```
 
 ###### 3. Follow the interactive prompts
@@ -46,14 +46,14 @@ service nym-node restart && journalctl -u nym-node.service -f --all
 
 Congratulation, you deployed QUIC transport bridge! The script offers a standalone tweaks and checks, you can always run it without any argument to see all the options:
 ```sh
-./quick_bridge_deployment.sh
+./quic_bridge_deployment.sh
 ```
 <br/>
 <AccordionTemplate name="Command output">
 ```shell
-root@localhost:~# ./quick_bridge_deployment.sh
+root@localhost:~# ./quic_bridge_deployment.sh
 iptables-persistent is already installed.
-Usage: ./quick_bridge_deployment.sh [command] [options]
+Usage: ./quic_bridge_deployment.sh [command] [options]
 
 Nym QUIC Bridge Deployment Helper Script
 
