--- a/documentation/docs/pages/operators/changelog.mdx
+++ b/documentation/docs/pages/operators/changelog.mdx
@@ -7,7 +7,7 @@ import { AccordionTemplate } from 'components/accordion-template.tsx';
 import { Steps } from 'nextra/components';
 import AbuseResponse from 'components/operators/templates/dmca_response.md';
 import OperatorIntroduction from 'components/operators/templates/provider_introduction.md';
-import QuickDeploymentSteps from 'components/operators/snippets/quick-bridge-deployment-script-setup.mdx';
+import QuicDeploymentSteps from 'components/operators/snippets/quic-bridge-deployment-script-setup.mdx';
 
 
 export const TestingSteps = () => (
@@ -51,7 +51,7 @@ This page displays a full list of all the changes during our release cycle from 
 
 ## QUIC Transport Bridge Deployment
 
-<QuickDeploymentSteps />
+<QuicDeploymentSteps />
 
 ## `v2025.17-isabirra`
 
