--- a/documentation/docs/pages/operators/nodes/nym-node/configuration.mdx
+++ b/documentation/docs/pages/operators/nodes/nym-node/configuration.mdx
@@ -8,7 +8,7 @@ import ExitPolicyStatusOutput from 'components/operators/snippets/wg-exit-policy
 import ExitPolicyTestOutput from 'components/operators/snippets/wg-exit-policy-test-output.mdx';
 import ExitPolicyTestServer from 'components/operators/snippets/wg-exit-policy-testing-from-server.mdx';
 import ExitPolicyTestOutside from 'components/operators/snippets/wg-exit-policy-testing-from-outside.mdx';
-import QuickDeploymentSteps from 'components/operators/snippets/quick-bridge-deployment-script-setup.mdx';
+import QuicDeploymentSteps from 'components/operators/snippets/quic-bridge-deployment-script-setup.mdx';
 
 
 export const ManagerIPOutput = () => (
@@ -537,7 +537,7 @@ Your node has successfully implemented wireguard exit policy with the same routi
 
 ## QUIC Transport Bridge Deployment
 
-<QuickDeploymentSteps />
+<QuicDeploymentSteps />
 
 ## Running `nym-node` as a non-root
 
