--- a/documentation/docs/pages/developers/concepts/message-queue.mdx
+++ b/documentation/docs/pages/developers/concepts/message-queue.mdx
@@ -1,4 +1,10 @@
+import { Callout } from 'nextra/components'
+
 # Message Queue
+
+<Callout type="info">
+    Although good to understand how the Nym Client works under the hood, this information is only of practical use if you're using the `Mixnet` module of the RustSDK and interacting with the SDK Mixnet Client at a low level. This is all mostly abstracted away with the `MixSocket`, `MixStream`, and `IpMixStream` abstractions.
+</Callout>
 
 ## Sphinx Packet Streams
 Clients, once connected to the Mixnet, **are always sending traffic into the Mixnet**; as well as the packets that you as a developer are sending from your application logic, they send [cover traffic](../../network/concepts/cover-traffic) at a constant rate defined by a Poisson process. This is part of the network's mitigation of timing attacks.
