--- a/documentation/docs/pages/operators/changelog.mdx
+++ b/documentation/docs/pages/operators/changelog.mdx
@@ -75,7 +75,7 @@ cargo Profile:      release
 
 Alongside this platform release we are happy to introduce several improvements and new tools for node operators.
 
-- [Updated version of QUIC brige deployment tool](https://github.com/nymtech/nym/blob/develop/scripts/nym-node-setup/quic_bridge_deployment.sh), **if you run in any Gateway mode, please install QUICK on your server, following [these steps](#quic-transport-bridge-deployment)**
+- [Updated version of QUIC brige deployment tool](https://github.com/nymtech/nym/blob/develop/scripts/nym-node-setup/quic_bridge_deployment.sh), **if you run a `nym-node` in any Gateway mode, please install QUIC on your server, following [these steps](#quic-transport-bridge-deployment)**
 
 - [New **Nym Node Status Dashboard**](https://node-status.nym.com)
 
